# binary_gene_solver

./: .gitignore  CMakeLists.txt  README.md  compute.c  compute.h  globals.h  macros.h  main.c  tests.c
